# kmitl-med-agent

./: README.md
.cursor/rules/: jupyter-notebook-creation.mdc
data/: test.csv
endpoints/iteration-1-fpi-endpoint/: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  docker-scripts.sh  pyproject.toml
endpoints/iteration-1-fpi-endpoint/index/00-save.bin/: index.pkl
endpoints/iteration-1-fpi-endpoint/src/app/: main.py
experiments/00-baseline-mcp-no-kb/: README.md  env.example  pyproject.toml
experiments/00-baseline-mcp-no-kb/notebooks/: 01_setup_and_imports.ipynb  02_autogen_agent_setup.ipynb  03_mcp_integration.ipynb  04_experiment_execution.ipynb  experiment.ipynb
experiments/00-baseline-mcp-no-kb/source/: 00_all.py  01_setup_and_imports.py  02_autogen_agent_setup.py  03_mcp_integration.py  04_experiment_execution.py
experiments/00-gemini-baseline/: main.py  pyproject.toml
experiments/01-ollama-mcp-rag/: .env  main.ipynb  pyproject.toml
experiments/01-ollama-mcp-rag/compettition_data/: submission.csv
experiments/01-ollama-mcp-rag/data/: doc.mkd  doc2.mkd  doc3.mkd
experiments/01-ollama-mcp-rag/submission/qwen3-32b/raw/: 01-init.csv
experiments/01-ollama-mcp-rag/submission/qwen3-32b/ready/: 02-force-single-answers-qwen3-32b-ntr.csv  03-force-single-vllm-qwen3-32b-fp-answers-qwen3-32b-ntr-vllm-force-single-all-inject-rag.csv  04-force-single-vllm-qwen3-32b-fp-mcp-hotwords-guideline-answers-qwen3-32b-ntr-vllm-force-single-all-inject-rag-hotword-mcp.csv
experiments/01-pagebase-title-indexer-testing/: README.md
ui-based-experiment/: Dockerfile  README.md  docker-compose.ui.yaml  pyproject.toml  remote_mcp_wrapper.py
vector-db-access-example/: README.md  main.py  pyproject.toml
